Refactor `Tree` to remove `IUtilitiesWrapper` dependency